--- a/index.html
+++ b/index.html
@@ -71,7 +71,6 @@ body{
   transition:transform .4s ease;
 }
 .g:hover img{transform:scale(1.03)}
-/* gentle variation */
 .g:nth-child(6n+1){grid-column:span 6;}
 .g:nth-child(6n+4){grid-column:span 6;}
 
@@ -118,7 +117,8 @@ body{
 
   <div class="topbar">
     <div class="logo">
-      <img src="assets-.keep/EDD%20logo.png" alt="Everyday Design logo">
+      <!-- ✅ Put EDD logo.png inside everyday-design/assets/ -->
+      <img src="assets/EDD%20logo.png" alt="Everyday Design logo">
     </div>
     <div class="nav">
       <a href="#about">About</a>
@@ -128,7 +128,8 @@ body{
   </div>
 
   <div class="hero card">
-    <img src="assets-.keep/main.jpg" alt="Everyday Design — featured project">
+    <!-- ✅ Put main.jpg inside everyday-design/assets/ -->
+    <img src="assets/main.jpg" alt="Everyday Design — featured project">
     <div class="hero-overlay">
       <div>
         <h1>Calm, functional spaces<br>made for real life.</h1>
@@ -150,44 +151,44 @@ body{
     <p>A preview of our projects. Full case studies coming soon.</p>
 
     <div class="gallery">
-      <div class="g"><img src="assets-.keep/131e1ce9-8ec6-4a4a-b109-b80b25f276f5.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/18899f4a-1ae4-4dd1-8b03-cb1647d5dd64.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/1ca457af-fcbf-4d51-b8d9-3eb16a8885fa.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/3070358c-ae8f-46e4-a494-5b83834c00a5.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/348667ca-377a-4586-bb3b-f0ab9f89c315.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/40df41f9-ab5c-46aa-8baf-d1bbfde1ef66.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/491f464f-3ccd-4b7e-9f38-8a9aa3b45066.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/5053cdee-f105-42c5-832e-292024db9d79.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/51d7f931-9215-43df-b7f9-0caeab4ddb46.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/56c49e6e-bc49-451d-a4f5-0fc0ab9db737.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/68b3c947-bb9e-418e-83a4-f8687f22cca2.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/803931cc-213d-476d-afba-3cdfe91f2ab0.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/852dd8c8-8920-4772-bf62-be7b1ceadab8.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/8893b716-66bb-4e9a-82d9-9280428d04c2.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/93ea64ed-ff6e-4b3a-a8d7-a8cf315b86c4.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/a1853303-a73b-4c8a-90ba-40e58a0e4b44.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/a84ddc48-7594-4673-b0d7-5f6ab33a2363.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/b0c9342c-4f8d-4f10-96ff-6ed67f94dfba.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/b81b7710-2951-40de-89c8-712f984d6f14.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/c9d07b2e-4e33-41a7-95d2-5147333933e8.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/cb944dd2-1125-4c85-b1c5-1af272ee6dcb.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/db532c7f-6398-482c-b39c-e6bafcca9206.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/dc63128b-f586-4351-93cb-66b02a85e71c.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/debb9da5-9c79-4ee7-82a8-7bfb0dd63292.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image2.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image8.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image9.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image10.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image11.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image12.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image13.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image14.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image15.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image16.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image17.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image19.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image23.jpg" alt=""></div>
-      <div class="g"><img src="assets-.keep/image24.jpg" alt=""></div>
+      <div class="g"><img src="assets/131e1ce9-8ec6-4a4a-b109-b80b25f276f5.jpg" alt=""></div>
+      <div class="g"><img src="assets/18899f4a-1ae4-4dd1-8b03-cb1647d5dd64.jpg" alt=""></div>
+      <div class="g"><img src="assets/1ca457af-fcbf-4d51-b8d9-3eb16a8885fa.jpg" alt=""></div>
+      <div class="g"><img src="assets/3070358c-ae8f-46e4-a494-5b83834c00a5.jpg" alt=""></div>
+      <div class="g"><img src="assets/348667ca-377a-4586-bb3b-f0ab9f89c315.jpg" alt=""></div>
+      <div class="g"><img src="assets/40df41f9-ab5c-46aa-8baf-d1bbfde1ef66.jpg" alt=""></div>
+      <div class="g"><img src="assets/491f464f-3ccd-4b7e-9f38-8a9aa3b45066.jpg" alt=""></div>
+      <div class="g"><img src="assets/5053cdee-f105-42c5-832e-292024db9d79.jpg" alt=""></div>
+      <div class="g"><img src="assets/51d7f931-9215-43df-b7f9-0caeab4ddb46.jpg" alt=""></div>
+      <div class="g"><img src="assets/56c49e6e-bc49-451d-a4f5-0fc0ab9db737.jpg" alt=""></div>
+      <div class="g"><img src="assets/68b3c947-bb9e-418e-83a4-f8687f22cca2.jpg" alt=""></div>
+      <div class="g"><img src="assets/803931cc-213d-476d-afba-3cdfe91f2ab0.jpg" alt=""></div>
+      <div class="g"><img src="assets/852dd8c8-8920-4772-bf62-be7b1ceadab8.jpg" alt=""></div>
+      <div class="g"><img src="assets/8893b716-66bb-4e9a-82d9-9280428d04c2.jpg" alt=""></div>
+      <div class="g"><img src="assets/93ea64ed-ff6e-4b3a-a8d7-a8cf315b86c4.jpg" alt=""></div>
+      <div class="g"><img src="assets/a1853303-a73b-4c8a-90ba-40e58a0e4b44.jpg" alt=""></div>
+      <div class="g"><img src="assets/a84ddc48-7594-4673-b0d7-5f6ab33a2363.jpg" alt=""></div>
+      <div class="g"><img src="assets/b0c9342c-4f8d-4f10-96ff-6ed67f94dfba.jpg" alt=""></div>
+      <div class="g"><img src="assets/b81b7710-2951-40de-89c8-712f984d6f14.jpg" alt=""></div>
+      <div class="g"><img src="assets/c9d07b2e-4e33-41a7-95d2-5147333933e8.jpg" alt=""></div>
+      <div class="g"><img src="assets/cb944dd2-1125-4c85-b1c5-1af272ee6dcb.jpg" alt=""></div>
+      <div class="g"><img src="assets/db532c7f-6398-482c-b39c-e6bafcca9206.jpg" alt=""></div>
+      <div class="g"><img src="assets/dc63128b-f586-4351-93cb-66b02a85e71c.jpg" alt=""></div>
+      <div class="g"><img src="assets/debb9da5-9c79-4ee7-82a8-7bfb0dd63292.jpg" alt=""></div>
+      <div class="g"><img src="assets/image2.jpg" alt=""></div>
+      <div class="g"><img src="assets/image8.jpg" alt=""></div>
+      <div class="g"><img src="assets/image9.jpg" alt=""></div>
+      <div class="g"><img src="assets/image10.jpg" alt=""></div>
+      <div class="g"><img src="assets/image11.jpg" alt=""></div>
+      <div class="g"><img src="assets/image12.jpg" alt=""></div>
+      <div class="g"><img src="assets/image13.jpg" alt=""></div>
+      <div class="g"><img src="assets/image14.jpg" alt=""></div>
+      <div class="g"><img src="assets/image15.jpg" alt=""></div>
+      <div class="g"><img src="assets/image16.jpg" alt=""></div>
+      <div class="g"><img src="assets/image17.jpg" alt=""></div>
+      <div class="g"><img src="assets/image19.jpg" alt=""></div>
+      <div class="g"><img src="assets/image23.jpg" alt=""></div>
+      <div class="g"><img src="assets/image24.jpg" alt=""></div>
     </div>
   </div>
 
